clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tdemo-gateway
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: tdemo-gateway
      port: 80
  virtualhost:
    fqdn: tdemo.createkey.fynesy.net
    tls:
      secretName: tdemo-gateway-tls-cert
